General media, sizing, and spacing fixes

--- a/app/assets/stylesheets/general.scss
+++ b/app/assets/stylesheets/general.scss
@@ -95,11 +95,11 @@ h6 {
 }
 
 i {
-  width: $font-size-medium;
+  width: $font-size-small;
   color: inherit;
   font: normal normal normal 14px/1 'FontAwesome';
-  font-size: $font-size-small;
-  line-height: $font-size-medium;
+  font-size: $font-size-smaller;
+  line-height: $font-size-large;
   text-align: center;
 }
 
